# prt-ollama-pull-rust

./: Cargo.toml  README.md
src/: main.rs
