[package]
name = "prt-ollama-pull"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"  # versión compatible con Actix-web 4.x
reqwest = { version = "0.12.8", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenvy = "0.15"
config = "0.14.1"
async-stream = "0.3.6"

